--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,24 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<header>
+  <h1 class="audiowide">{{ page.title }}</h1>
+  <h2 class="megrim">Devin Brown</h2>
+<!--   <p>{{ page.date | date_to_long_string }}</p> -->
+</header>
 
-<div class="post">
-{{ content }}
-</div>
+<hr>
+
+<article>
+  {{ content }}
+</article>
+
+<hr>
+
+<footer class="no-print">
+  <span><a href="http://obfk.github.io/resume/" target="_blank">resume</a></span>
+  <span>&nbsp;·&nbsp;</span>
+  <span><a href="https://github.com/obfk" target="_blank">github</a></span>
+  <span>&nbsp;·&nbsp;</span>
+  <span><a href="http://www.linkedin.com/pub/devin-brown/20/4b/90b" target="_blank">linkedin</a></span>
+</footer>
