--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   background-color: #2C3F49;
   color: #eee;
   max-width: 750px;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
   font-family: 'Helvetica Neue', Helvetica;
@@ -20,7 +21,7 @@ header {text-align: center;}
 article {padding: 0 10px;}
 article p {line-height: 22px; font-size: 18px;}
 
-footer {font-size: 18px; text-align: center;}
+footer {font-size: 16px; text-align: center; text-transform: uppercase;}
 
 /* FONTS */
 
