Include date in post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,12 @@ layout: default
 <header>
   <h1 class="audiowide">{{ page.title }}</h1>
   <h2 class="megrim">Devin Brown</h2>
-<!--   <p>{{ page.date | date_to_long_string }}</p> -->
 </header>
 
 <hr>
 
 <article>
+  <h4>{{ page.date | date_to_long_string }}</h4>
   {{ content }}
 </article>
 
