--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
         <link href='http://fonts.googleapis.com/css?family=Megrim|Audiowide' rel='stylesheet' type='text/css'>
 
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/main.css">
     </head>
     <body>
